--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bip39": "^3.0.2",
     "bootstrap": "^4.5.1",
+    "ethereumjs-wallet": "^1.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "store": "^2.0.12",
+    "web3": "^1.2.11"
   },
   "scripts": {
     "start": "react-scripts start",
