--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-qrcodes": "^1.0.7",
     "react-scripts": "3.4.1",
     "store": "^2.0.12",
     "web3": "^1.2.11"
