--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-qrcodes": "^1.0.7",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "store": "^2.0.12",
     "web3": "^1.2.11"
